fix error with filename

--- a/paper/News-Classification.tex
+++ b/paper/News-Classification.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \author{Stephen M. Lee}
-\title{A NLP Approach to Understanding News Article Variation by Source}
+\title{A NLP Approach to Understanding Variation in Political News}
 
 \begin{document}
 	\maketitle 
