--- a/paper/figures/summary_table.tex
+++ b/paper/figures/summary_table.tex
@@ -1,13 +1,14 @@
 \begin{table}[H]
+    \caption{Summary statistics by news source. }
+    \label{tab:summary}
     \centering
-    \begin{tabular}{|l|r|r|r|r|r|} \hline
+    \begin{tabular}{l|r|r|r|r|r} \hline \hline
              &                                &                                 &                                       &                                        &                                            \\
-             &                                & \multicolumn{1}{c|}{Avg}        &                                       &                                        & \multicolumn{1}{c|}{Avg words}             \\
-    Source   & \multicolumn{1}{c|}{Documents} & \multicolumn{1}{c|}{word count} & \multicolumn{1}{c|}{Pct Adjectives}   & \multicolumn{1}{c|}{Pct Adverbs}       & \multicolumn{1}{c|}{per sentence}          \\ \hline \hline
+             &                                & \multicolumn{1}{c|}{\textit{Average}}        &   \multicolumn{1}{c|}{\textit{Percent}}            &  \multicolumn{1}{c|}{\textit{Percent}}      & \multicolumn{1}{c}{\textit{Average}}             \\
+    \textit{Source}   & \multicolumn{1}{c|}{\textit{Documents}} & \multicolumn{1}{c|}{\textit{word count}} & \multicolumn{1}{c|}{\textit{adjectives}}   & \multicolumn{1}{c|}{\textit{adverbs}}       & \multicolumn{1}{c}{\textit{words / sentence}}          \\ \hline 
+             &                                &                                 &                                       &                                        &                                            \\
     Fox      & 661                            & 686.2                           & 0.066                                 & 0.034                                  & 20.1                                       \\
     PBS      & 1739                           & 654.3                           & 0.066                                 & 0.032                                  & 18.0                                       \\
     Vox      & 1027                           & 1332.8                          & 0.073                                 & 0.046                                  & 21.3                                       \\ \hline  
     \end{tabular}
-    \caption{Summary statistics by data by source. }
-    \label{tab:summary}
 \end{table}
