--- a/paper/figures/summary_table.tex
+++ b/paper/figures/summary_table.tex
@@ -2,13 +2,13 @@
     \caption{Summary statistics by news source. }
     \label{tab:summary}
     \centering
-    \begin{tabular}{l|r|r|r|r|r} \hline \hline
+    \begin{tabular}{l|r|r|r|r|c} \hline \hline
              &                                &                                 &                                       &                                        &                                            \\
              &                                & \multicolumn{1}{c|}{\textit{Average}}        &   \multicolumn{1}{c|}{\textit{Percent}}            &  \multicolumn{1}{c|}{\textit{Percent}}      & \multicolumn{1}{c}{\textit{Average}}             \\
     \textit{Source}   & \multicolumn{1}{c|}{\textit{Documents}} & \multicolumn{1}{c|}{\textit{word count}} & \multicolumn{1}{c|}{\textit{adjectives}}   & \multicolumn{1}{c|}{\textit{adverbs}}       & \multicolumn{1}{c}{\textit{words / sentence}}          \\ \hline 
              &                                &                                 &                                       &                                        &                                            \\
-    Fox      & 661                            & 686.2                           & 0.066                                 & 0.034                                  & 20.1                                       \\
-    PBS      & 1739                           & 654.3                           & 0.066                                 & 0.032                                  & 18.0                                       \\
-    Vox      & 1027                           & 1332.8                          & 0.073                                 & 0.046                                  & 21.3                                       \\ \hline  
+    Fox      & 661                            & 686.2                           & 6.6\,\%                               & 3.4\,\%                                & 20.1                                       \\
+    PBS      & 1739                           & 654.3                           & 6.6\,\%                               & 3.2\,\%                                & 18.0                                       \\
+    Vox      & 1027                           & 1332.8                          & 7.3\,\%                               & 4.6\,\%                                & 21.3                                       \\ \hline  
     \end{tabular}
 \end{table}
