--- a/paper/figures/ngram_freq.tex
+++ b/paper/figures/ngram_freq.tex
@@ -1,4 +1,4 @@
-\begin{table}[H]
+\begin{table}[]
     \centering
     \caption{Most frequent words and phrases, by news source.}
     \label{tab:ngram}
